<resources>
        <string name="app_name">Crealth</string>
        <string name="notification_button_description">Notification Button</string>
        <string name="home">Home</string>
        <string name="forum">Forum</string>
        <string name="article">Article</string>
        <string name="profile">Profile</string>
        <string name="desc">Description</string>
        <string name="home_1">Welcome</string>
        <string name="home_2">Casey Morgan</string>
        <string name="home_3">Search...</string>
        <string name="home_4">Your journey to</string>
        <string name="home_5">a healthier you</string>
        <string name="home_6">starts here.</string>
        <string name="home_7">Try now!</string>
        <string name="home_8">Weight</string>
        <string name="home_9">CalorieBot</string>
        <string name="home_10">MedicalBot</string>
        <string name="home_11">Popular</string>
        <string name="forum_post_1">Search Topic...</string>
        <string name="name">Name</string>
        <string name="post_content">Post content</string>
        <string name="chatbot">ChatBot</string>
        <string name="landing_1">Empower Your Health</string>
        <string name="landing_2">Take Control of</string>
        <string name="landing_3">Your Nutrition</string>
        <string name="btn_landing">Let\'s Get Started!</string>
        <string name="landing_4">Already have an account?</string>
        <string name="landing_5"><u>Login</u></string>
        <string name="loading">Loading...</string>
        <string name="error">Try Again</string>
        <string name="title_activity_register">RegisterActivity</string>
        <string name="first_fragment_label">First Fragment</string>
        <string name="second_fragment_label">Second Fragment</string>
        <string name="register_1">Create an</string>
        <string name="register_2">Account</string>
        <string name="input_name">Full Name</string>
        <string name="input_email">Email</string>
        <string name="input_password">Password</string>
        <string name="btn_register">Register</string>
        <string name="login_1">Welcome</string>
        <string name="login_2">Back!</string>
        <string name="btn_login">Login</string>
        <string name="article_1">Search…</string>
        <string name="article_2">Recommended for you</string>
        <string name="article_3">The Role of Hygiene in Preventing Respiratory Infections</string>
        <string name="article_4">Sept, 28 2023</string>
        <string name="article_5">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
        <string name="article_6">Lihat Lebih Detail..</string>
        <string name="forum_0">Crealth Forum</string>
        <string name="article1">Articles</string>
        <string name="profile1">Profile</string>
        <string name="profile2">Account Information</string>
        <string name="profile3">caseymorgan88@gmail.com</string>
        <string name="btnSaveChanges">Save Changes</string>
        <string name="forum1">Farel Erico</string>
        <string name="forum2">14/06/2024</string>
        <string name="forum3">What was your experience like when you first tried yoga?</string>
        <string name="forum4">Ask your question or share your health concern...</string>
        <string name="chatbot1">Submit</string>
        <string name="chatbot2">Chatbot Error</string>
        <string name="btnlogout">Logout</string>
</resources>