<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegisterActivity">

    <ImageView
        android:id="@+id/ivBgRegister"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="168dp"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_register"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/ivBgRegister"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_1"
            android:textSize="44sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="start"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_2"
            android:textSize="44sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="start"
            android:layout_marginBottom="40dp"
            />
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_name"
            android:layout_gravity="start"
            android:textColor="@color/black"/>

        <com.bangkit.crealth.view.customview.CustomRegisterNameTextInputLayout
            android:id="@+id/customNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:layout_gravity="start"
            android:textColor="@color/black" />

        <com.bangkit.crealth.view.customview.CustomRegisterEmailTextInputLayout
            android:id="@+id/customEmailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:layout_gravity="start"
            android:textColor="@color/black"/>

        <com.bangkit.crealth.view.customview.CustomRegisterPasswordTextInputLayout
            android:id="@+id/customPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_register"
            android:backgroundTint="@color/bgBtn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:enabled="false"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>