<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/ivBgUpLogin"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_up_login"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivBgUpLogin"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="-100dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_1"
            android:textSize="44sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="start"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_2"
            android:textSize="44sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_bold"
            android:layout_gravity="start"
            android:layout_marginBottom="40dp"
            />
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_email"
            android:layout_gravity="start"
            android:textColor="@color/black" />

        <com.bangkit.crealth.view.customview.CustomLoginEmailTextInputLayout
            android:id="@+id/customEmailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:layout_gravity="start"
            android:textColor="@color/black"/>

        <com.bangkit.crealth.view.customview.CustomLoginPasswordTextInputLayout
            android:id="@+id/customPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_login"
            android:backgroundTint="@color/bgBtn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:enabled="false"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_down_login"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>