<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home_up"
        android:padding="17dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/home_1"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_weight="5"/>
            <Button
                android:id="@+id/btnNotif"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/notif"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/home_2"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/icon_search"
            android:drawablePadding="14dp"
            android:hint="@string/home_3"
            android:inputType="text"
            android:paddingVertical="14dp"
            android:paddingStart="20dp"
            android:textColorHint="#AAAAAA"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLbanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_home_banner"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="45dp"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/textOnPrimary"
            android:fontFamily="@font/inter_medium"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintTop_toBottomOf="@+id/btnLanding"/>
        <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/home_7"
            android:backgroundTint="@color/textOnPrimary"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lLbanner"
        android:layout_margin="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_nutrition"
            android:text="@string/home_9"
            android:textColor="@color/textOnPrimary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/bgPrimary"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnChatbot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_chat"
            android:text="@string/home_10"
            android:textColor="@color/textOnPrimary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:backgroundTint="@color/bgPrimary"
            android:textAllCaps="false"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPopular"
        app:layout_constraintTop_toBottomOf="@+id/lLMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_11"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvArticleHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvPopular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/Widget.App.ProgressBar"
        app:layout_constraintTop_toTopOf="@id/rvArticleHome"
        app:layout_constraintBottom_toBottomOf="@id/rvArticleHome"
        app:layout_constraintStart_toStartOf="@id/rvArticleHome"
        app:layout_constraintEnd_toEndOf="@id/rvArticleHome" />


</androidx.constraintlayout.widget.ConstraintLayout>